1.画面幅1500px時の表示崩れを修正。2.headerにmargin追加。

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </ul>
     </header>
     <main>
-        <div class="top">
-            <div class="top-background"></div>
-            <div class="top-text">
-                <p>毎日を笑顔に</p>
+        <div class="main-container">
+            <div class="main-right"></div>
+            <div class="main-left">
+                <p class="main-left-text">毎日を笑顔に</p>
             </div>
         </div>
     </main>
